2008-01-14  Soren Sandmann  <sandmann@redhat.com>

	* appearance-desktop.c: Update list model when the background
	changes. 
	* gnome-wp-item.c: Create a GnomeBG for the item.
	* gnome-wp-item.h: Add a GnomeBG field - Remove
	gnome_wp_item_dup() function.
	* gnome-wp-info.c: Delete gnome_wp_item_dup() function.
	* gnome-wp-xml.c: Ensure that a GnomeBG exists.

2007-12-22  Thomas Wood  <thos@gnome.org>

	* theme-installer.c: (transfer_done_tgz_tbz),
	(transfer_done_archive), (gnome_theme_install_real),
	(transfer_done_cb), (gnome_theme_install_from_uri):

	Make error dialogs more complient with the HIG (bug 400968).

2007-12-21  Luca Ferretti  <elle.uca@libero.it>

	* appearance-themes.c: (theme_message_area_response_cb),
	(theme_message_area_update), (themes_init):
	* theme-util.h:
	Read WindowTitleFont and DocumentsFont from meta-theme
	and use to set the value for /apps/metacity/general/titlebar_font
	and /desktop/gnome/interface/document_font_name GConf keys.
	This closes bug #504250

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_update_description): slightly change
	the code layout in hoping that intltool will now pick up the
	translation hint...

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't mark padding strings for translation
	and add translation comments for the pixel order strings (bug #502087)

2007-11-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init):
	* theme-installer.c: (gnome_theme_installer_run): make "Open" the
	default action for the file choosers (bug #500091)

2007-11-22  Frederic Crozat  <fcrozat@mandriva.com>

	* gnome-wp-item.c: Fix detection of image mimetype (bug #498980)

2007-11-18  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init): add shortcut for
	/usr/share/backgrounds to background file chooser and also consider it
	when setting the initial directory (bug #497807)

2007-11-11  Jens Granseuer  <jensgr@gmx.net>
