@@ -1,3 +1,11 @@
+2008-01-24  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-desktop.c: (on_item_changed): only declare variables at
+	the beginning of a code block...
+	* gnome-wp-item.c: (gnome_wp_item_update_description): ... and fix a
+	constness warning
+	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): remove unused variable
+
 2008-01-14  Soren Sandmann  <sandmann@redhat.com>
 
 	* appearance-desktop.c: Update list model when the background
